# ICESat2

./: .gitignore  README.md  helper_test.py  move_data_files.py  plot_profile_variables.ipynb  pyproject.toml  test_import.py  test_notebook.ipynb  transfer_summit_data.ipynb  view_summit_mpl_raw.ipynb
src/: __init__.py  describe_h5.py  download_summit.ipynb  plot_profile_variables.ipynb  pyproject.toml  transfer_summit_data.ipynb  view_summit_mpl_raw.ipynb
src/ATL09/: add_coordinates.py  load_xarray_from_ATL09.py  test.ipynb  test_add_coordinates.ipynb  test_plot_clouds.ipynb  test_visualisations.ipynb
src/MMCR/: README.md
src/MPL/: README.md
src/atl09/: README.md  __init__.py  add_coordinates.py
src/eeasm_icesat/: __init__.py  download_summit.ipynb  plot_cloud_regions.py  test_notebook.ipynb
src/eeasm_icesat/atl09/: __init__.py  add_coordinates.py  download_rgt.py  interp_low_to_high.py  load_xarray_from_ATL09.py  test_add_coordinates.ipynb
src/helper/: move_data_files.py
src/mmcr/: extract_from_mmcrzip.py  load_xarray_from_mmcrmom.py  move_from_gws2.py  test_load_mmcr.ipynb
src/mpl/: README.md  __init__.py  check_ranges_heights_conversion.py  extract_from_mplgz.py  extract_mpl2nc.py  get_mpl_from_archive.py  load_mpl_inline.py  move_mplraw.py  raw_to_ingested.py  test_compare_ingested_to_raw.ipynb  test_find_calibration_files.ipynb  test_get_mpl.ipynb  test_open_mpl.ipynb  test_raw_to_ingested.ipynb
src/neely_heather_code/: Greenland-INP-paper.ipynb  Plot_MMCR_Spectra.ipynb  Plotting_MMCR.ipynb  lidar_radar_ICNC.ipynb  radar_lidar_xr_SLB.ipynb
(+53 files in other folders)
