[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'eeasmicesat'
version = '0.0.1'
dependencies = [
    'icepyx',
    'mpl2nc',
    'datetime',
    'xarray',
    'numpy',
    'netCDF4',
]

[tool.setuptools.packages.find]
where = ['src']
exclude = [
    '*.sh',
    '*.cdf',
    '*.ipynb',
    'neely_heather_code/*',
    'helper/*'
]